--- a/src/peakrdl_python/templates/addrmap_simulation_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_simulation_tb.py.jinja
@@ -18,6 +18,9 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 {% include "header_tb.py.jinja" with context %}
 
+{% from 'template_ultilities.py.jinja' import peakrdl_python_sim_lib with context %}
+{% from 'template_ultilities.py.jinja' import peakrdl_python_lib with context %}
+
 {% if legacy_block_access %}from array import array as Array{% endif %}
 from typing import Union, cast
 {% if asyncoutput %}
@@ -34,15 +37,15 @@ import random
 from enum import IntEnum
 {% endif %}
 
-from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}sim_lib.register import Register,MemoryRegister
-from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}sim_lib.field import Field
+from {{ peakrdl_python_sim_lib() }}.register import Register,MemoryRegister
+from {{ peakrdl_python_sim_lib() }}.field import Field
 
 from ._{{top_node.inst_name}}_sim_test_base import {{top_node.inst_name}}_SimTestCase, {{top_node.inst_name}}_SimTestCase_BlockAccess
 from ._{{top_node.inst_name}}_sim_test_base import __name__ as base_name
 from ._{{top_node.inst_name}}_test_base import random_enum_reg_value
 
 {% if not legacy_enum_type %}
-from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import SystemRDLEnum
+from {{ peakrdl_python_lib() }} import SystemRDLEnum
 {% endif %}
 
 class {{fq_block_name}}_single_access({{top_node.inst_name}}_SimTestCase): # type: ignore[valid-type,misc]
